--- a/signup.css
+++ b/signup.css
@@ -3,6 +3,11 @@
 	box-sizing: border-box;
 }
 
+.fieldlabels
+{
+	text-align: left;
+}
+
 body {
 	background: #f6f5f7;
 	display: flex;
@@ -13,20 +18,23 @@ body {
 	height: 100vh;
 	margin: -20px 0 50px;
 }
+
 h1 {
 	font-weight: bold;
 	margin: 0;
 }
+
 form {
 	background-color: #FFFFFF;
 	display: flex;
-	align-items: center;
-	justify-content: center;
+	align-items: left;
+	justify-content: left;
 	flex-direction: column;
 	padding: 0 50px;
 	height: 100%;
 	text-align: center;
 }
+
 input {
 	background-color: #eee;
 	border: none;
@@ -43,7 +51,7 @@ input {
 	overflow: hidden;
 	width: 740px;
 	max-width: 100%;
-	min-height: 500px;
+	min-height: 550px;
 }
 
 button {
